--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                             <li><a data-hover="Conventions"  href="about.html"><span>Conventions</span></a></li>
                                             <li><a data-hover="Profile"  href="rooms.html"><span>Profile</span></a></li>
                                             <li><a data-hover="Chat"  href="gallery.html"><span>Chat</span></a></li>
-                                            <li><a data-hover="MegaChat" href="dinning.html"><span>MegaChat</span></a></li>
+                                            <li><a data-hover="Discord" href="dinning.html"><span>Discord</span></a></li>
                                             <li><a data-hover="Forum" href="news.html"><span>Forum</span></a></li>
                                             <li><a data-hover="Contact Us" href="contact.html"><span>Contact Us</span></a></li>
                                         </ul>
@@ -242,9 +242,9 @@
                             </div>
                             <div class="side-B">
                                 <div class="product-desc-side">
-                                    <h3><a>Conventions</a></h3>
-                                    <p>View all-in-one list of conventions worldwide. Trust our up-to-date and verified with other sources list!</p>
-                                    <div class="links"><a href="about.html">Read more</a></div>
+                                    <h3><a href="about.html">Conventions</a></h3>
+                                    <p>View all-in-one list of conventions with worldwide map. Trust our up-to-date and verified with other sources list!</p>
+                                    <div class="links"><a href="about.html">View all conventions</a></div>
                                 </div>
                             </div>
                         </div>
@@ -259,9 +259,9 @@
                             </div>
                             <div class="side-B">
                                 <div class="product-desc-side">
-                                    <h3><a>Worldwide Map</a></h3>
-                                    <p>With easy-to-see world map, see if there are any cons near you!</p>
-                                    <div class="links"><a href="rooms.html">Read more</a></div>
+                                    <h3><a href="dinning.html">Discord</a></h3>
+                                    <p>Connect with friends via discord live chat convention channels as member or guest!</p>
+                                    <div class="links"><a href="dinning.html">Join chat now</a></div>
                                 </div>
                             </div>
                         </div>
@@ -269,9 +269,9 @@
                         <div class="col-md-6 col-sm-12 col-xs-12 remove-padd-right">
                             <div class="side-A">
                                 <div class="product-desc-side">
-                                    <h3><a>Chat with friends</a></h3>
+                                    <h3><a href="gallery.html">Chat with friends</a></h3>
                                     <p>You can form groups and plan with them! Send private messages to users!</p>
-                                    <div class="links"><a href="single-blog.html">Read more</a></div>
+                                    <div class="links"><a href="gallery.html">Chat now</a></div>
                                 </div>
                             </div>
 
@@ -287,9 +287,9 @@
                         <div class="col-md-6 col-sm-12 col-xs-12 remove-padd-left">
                             <div class="side-A">
                                 <div class="product-desc-side">
-                                    <h3><a>Join community</a></h3>
-                                    <p>Join the community chat for each convention to see what others are up to!</p>
-                                    <div class="links"><a href="single-blog.html">Read more</a></div>
+                                    <h3><a href="news.html">Community Forums</a></h3>
+                                    <p>Join the community forum for posts from anime community!</p>
+                                    <div class="links"><a href="news.html">See posts</a></div>
                                 </div>
                             </div>
 
@@ -461,7 +461,7 @@
                                     <li><a href="about.html">Conventions</a></li>
                                     <li><a href="rooms.html">Profile</a></li>
                                     <li><a href="gallery.html">Chat</a></li>
-                                    <li><a href="#">MegaChat</a></li>
+                                    <li><a href="#">Discord</a></li>
                                     <li> <a href="news.html">Forum</a></li>
                                     <li> <a href="contact.html">Contact</a></li>
                                 </ul>
